# lopload

./: .env.e2e  .env.e2e.example  .env.remote.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  docker-compose.demo.yml  index.html  package.json  tsconfig.json  vite.config.ts  warren-app-spec.md
.github/: dependabot.yml
.github/scripts/: build-latest-json.mjs
.github/workflows/: build.yml  ci.yml  nightly-remote.yml
scripts/: selftest.ts  set-version.mjs
src/: App.css  App.tsx  bun-test.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fastfs.rs  fasthttp.rs  keychain.rs  lib.rs  main.rs  selftest.rs  tray.rs
src/lib/: concurrency.ts  engine.ts  errors.ts  logger.ts  md5.ts  tuning.ts  types.ts  updatePolicy.ts
src/selftest/: mount.tsx
src/services/: appServices.ts  dragDropExpand.ts  host.tauri.ts  host.ts  real.ts  trayState.ts
src/tauri/: fs.ts  http.ts  isPortable.ts  keychain.ts  logSink.ts  notify.ts  rawFetch.ts  settings.ts  tray.ts  updater.ts
src/ui/: AddStorageDialog.tsx  AppShell.tsx  AutoUpdateContext.tsx  AutoUpdateContextValue.ts  Confetti.tsx  ConfirmDialog.tsx  ConnectionSwitcher.tsx  ContextMenu.tsx  CredentialsReentryForm.tsx  ManageConnectionsDialog.tsx  Onboarding.tsx  RemoteBrowser.tsx  SettingsDialog.tsx  SetupForm.tsx  SetupScreen.tsx  StatusChip.tsx  ThemeToggle.tsx  Thumbnail.tsx  TransferPanel.tsx  (+13 more)
tests/: app.test.ts  setup.ts
(+103 files in other folders)
