[package]
name = "lopload"
version = "0.1.0"
description = "A desktop file manager for S3-compatible storage"
authors = ["Andrea Bruno"]
edition = "2021"
license = "MIT"
repository = "https://github.com/baronunread/lopload"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lopload_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
keyring = { version = "3", features = ["windows-native", "sync-secret-service"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

